# PoE2-Farm-Ledger

./: .gitignore  CHANGELOG.md  README.md  SECURITY_ANALYSIS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  api.ts  format.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: calculations.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  poe2scout.rs  schema.rs
src/components/: ActiveSummary.svelte  DefaultChaseSelector.svelte  DefaultInvestmentEditor.svelte  EditableInvestment.svelte  EditableLoot.svelte  PriceTable.svelte  ReadOnlyLines.svelte  ReportTable.svelte  SessionTable.svelte
